--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,12 @@
 <html lang="en" ng-app="angularApp">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Interest calculator 2000</title>
-
 	<!-- Stylesheet -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="content/styles.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 	<!-- Angular CDN -->
   <script src="https://code.angularjs.org/1.3.0-rc.1/angular.min.js"></script>
   <script src="https://code.angularjs.org/1.3.0-rc.1/angular-route.min.js"></script>
